add endpoint to add tags
